[gd_scene load_steps=2 format=2]

[ext_resource path="res://utils/player_stats.gd" type="Script" id=1]

[node name="PlayerStats" type="Node"]
script = ExtResource( 1 )

[node name="work_timer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="minute_timer" type="Timer" parent="."]
wait_time = 3.75
[connection signal="timeout" from="work_timer" to="." method="_on_work_timer_timeout"]
[connection signal="timeout" from="minute_timer" to="." method="_on_minute_timer_timeout"]
